# final_project

./: .gitignore  CMakeLists.txt  README.md  launch_all.sh  package.xml  vlab_script.sh  vlab_specific_commands.txt
action/: Pose.action
assignment1/: CMakeLists.txt  README.md  package.xml
assignment1/action/: Pose.action
assignment1/src/: navigation_methods.cpp  poseClient.cpp  poseServer.cpp  scan_methods.cpp
assignment2/: CMakeLists.txt  README.md  package.xml  to_change.txt
assignment2/action/: Arm.action  Pose.action
assignment2/launch/: assignment2.launch
assignment2/msg/: Object.msg
assignment2/src/: Handler.cpp  Ranges.txt  clientNode.cpp  client_node.cpp  detectionNode.cpp  detection_node.cpp  imageScanNode.cpp  manipulationNode.cpp  manipulation_node.cpp  navigation_methods.cpp  navigation_methods.h  navigation_node.cpp  poseServerRevisited.cpp  scanNode.cpp  scan_methods.cpp  scan_methods.h  scan_node.cpp  utils.cpp  utils.h
assignment2/src/headers/: Object.h  Obstacle.h  scan_methods.h  utils.h
assignment2/src/utils/: navigation_methods.cpp  scan_methods.cpp  utils.cpp
assignment2/srv/: Detection.srv
msg/: Obstacle.msg
src/: .poseClient.cpp.swp  .poseServer.cpp.swp  Obstacle.h  navigation_methods.cpp  navigation_methods.h  poseClient.cpp  poseServer.cpp  scan_methods.cpp  scan_methods.h  utils.cpp  utils.h
