<?xml version="1.0"?>
<package format="2">
  <name>assignment2</name>
  <version>0.0.1</version>
  <description>The assignment2 package</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>actionlib</depend>
  <depend>tiago_iaslab_simulation</depend>
  <depend>assignment1</depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>tiago_iaslab_simulation</exec_depend>
  <exec_depend>assignment1</exec_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
